# demo-package

./: README.md  environment.yml  notebook.ipynb  pyproject.toml  references.md  requirements.txt  setup.py
.github/workflows/: flake8.yml  jupyter.yml  pytest.yml  sphinx-autobuild.yml
acsefunctions/: __init__.py
acsefunctions/bessel_group/: bessel_function.py
acsefunctions/taylors_series/: trig_functions.py
docs/: conf.py  index.rst
docs/_build/html/: index.html  py-modindex.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
latex/: ascefunctions.aux  ascefunctions.fdb_latexmk  ascefunctions.idx  ascefunctions.ilg  ascefunctions.ind  ascefunctions.out  ascefunctions.tex  ascefunctions.toc
tests/: test_allfunctions.py
